--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework</groupId>
