--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 spring.application.name=overalt
 server.port=1000
+
+# Database
+# spring.datasource.url=jdbc:mysql://localhost:5432/overalt_db
+# spring.datasource.username=postgres
+# spring.datasource.password=overalt
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=overalt
+spring.datasource.password=root
+
+#JPA settings
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
