Added Superbase Cloud Database.

--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,17 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
-			</dependency>
+		</dependency> -->
+
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>42.7.3</version>
+	</dependency>
+
 
 
 		<dependency>
