--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,23 @@ server.port=1000
 
 
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=overalt
-spring.datasource.password=root
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# spring.datasource.username=overalt
+# spring.datasource.password=root
 
-#JPA settings
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+# #JPA settings
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.hibernate.ddl-auto=update
+
+# Superbase Database
+
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.xcszipachstdzrydsufb&password=venki.reddi
+spring.datasource.username=postgres
+spring.datasource.password=venki.reddi
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
