--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 	</properties>
 	<dependencies>
 
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.1.0</version>
+	</dependency>
+
+	
 		<!-- <dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
