--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
             <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.0</version> 
+        </dependency>
+
         
     </dependencies>
 
