--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
+        distribution: 'temurin'  # Use 'temurin', 'zulu', or 'adoptopenjdk' based on your preference
     
     - name: Build with Maven
       run: mvn clean package
