--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -3,10 +3,10 @@ name: Build and Push Docker image
 on:
   push:
     branches:
-      - main  # Trigger the workflow on push to the main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger the workflow on pull requests to the main branch
+      - main
 
 jobs:
   build:
@@ -20,10 +20,13 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'  # Use 'temurin', 'zulu', or 'adoptopenjdk' based on your preference
-    
+        distribution: 'temurin'
+
     - name: Build with Maven
       run: mvn clean package
+
+    - name: List target directory
+      run: ls -la target
 
     - name: Build Docker image
       run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/myapp:latest .
